# simple_restaurant_api

./: Cargo.toml  README.md  Rocket.toml  docker-compose.yml
migrations/: 20220720055701_tables.sql  20220720055723_data.sql
src/: lib.rs  main.rs
src/models/: item.rs  mod.rs  order.rs  table.rs
src/routes/: health_check.rs  health_check_routes.rs  item.rs  item_routes.rs  mod.rs  order.rs  order_routes.rs  table.rs  table_routes.rs
src/tests/: health.rs  health_test.rs  item.rs  item_test.rs  mod.rs  order.rs  order_test.rs  table.rs  table_test.rs
src/utils/: mod.rs  random_generator.rs
src/utils/api/: api_response.rs
